first react component

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <title>React JS Basics</title>
   </head>
   <body>
-    <h1>Welcome Buddy!!</h1>
-    <h3>Entamme... padupettu</h3>
+    <div class="" id="app">
+
+    </div>
     <script type="text/javascript" src="/app/bundle.js">
 
     </script>
